datas for internet and cleaned all

--- a/scripts/11-19.ipynb
+++ b/scripts/11-19.ipynb
@@ -1262,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1274,7 +1274,8 @@
     }
    ],
    "source": [
-    "check_noob = pandas.read_csv('../datas/01income-cleaned-3.csv')\n",
+    "import pandas\n",
+    "check_noob = pandas.read_csv('../datas/4-medianIncomeACS_Median_Household_Income_Variables_-_Boundaries.csv')\n",
     "check_hack = pandas.read_csv('../datas/01income-cleaned.csv')\n",
     "print(check_hack.shape)\n",
     "print(check_noob.shape)"
@@ -1282,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
