modify cleaned data file name

--- a/scripts/11-19.ipynb
+++ b/scripts/11-19.ipynb
@@ -1350,6 +1350,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "IncomeDistribution\nInternetEducation\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "path = 'ACS_Household_Income_Distribution_Variables_-_Boundaries'\n",
+    "path2 = 'ACS_Internet_Access_by_Education_Variables_-_Boundaries'\n",
+    "print(re.sub(r'(acs)*_*-*(access)*(variables)*(boundaries)*(by)*(household)*', '', path, flags=re.I))\n",
+    "print(re.sub(r'(acs)*_*-*(access)*(variables)*(boundaries)*(by)*(household)*', '', path2, flags=re.I))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
