index - info chart WIP

--- a/scripts/1207phys.ipynb
+++ b/scripts/1207phys.ipynb
@@ -2013,6 +2013,88 @@
    ]
   },
   {
+   "source": [
+    "# internet range"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "     modzcta  no highschool  highschool   college      perc\n",
+       "0      11370       0.186111    0.535966  0.277922  0.146145\n",
+       "1      10473       0.241479    0.578220  0.180301  0.205641\n",
+       "2      10454       0.414125    0.499723  0.086152  0.330787\n",
+       "3      10455       0.366078    0.496865  0.137058  0.276181\n",
+       "4      10472       0.373730    0.502283  0.123987  0.257344\n",
+       "..       ...            ...         ...       ...       ...\n",
+       "172    10312       0.068602    0.593879  0.337519  0.101062\n",
+       "173    10314       0.097319    0.555236  0.347445  0.119923\n",
+       "174    10307       0.073383    0.565547  0.361071  0.115211\n",
+       "175    10309       0.075594    0.573091  0.351315  0.118634\n",
+       "176    10303       0.189567    0.563822  0.246611  0.218108\n",
+       "\n",
+       "[177 rows x 5 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>modzcta</th>\n      <th>no highschool</th>\n      <th>highschool</th>\n      <th>college</th>\n      <th>perc</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>11370</td>\n      <td>0.186111</td>\n      <td>0.535966</td>\n      <td>0.277922</td>\n      <td>0.146145</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>10473</td>\n      <td>0.241479</td>\n      <td>0.578220</td>\n      <td>0.180301</td>\n      <td>0.205641</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>10454</td>\n      <td>0.414125</td>\n      <td>0.499723</td>\n      <td>0.086152</td>\n      <td>0.330787</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>10455</td>\n      <td>0.366078</td>\n      <td>0.496865</td>\n      <td>0.137058</td>\n      <td>0.276181</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>10472</td>\n      <td>0.373730</td>\n      <td>0.502283</td>\n      <td>0.123987</td>\n      <td>0.257344</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>172</th>\n      <td>10312</td>\n      <td>0.068602</td>\n      <td>0.593879</td>\n      <td>0.337519</td>\n      <td>0.101062</td>\n    </tr>\n    <tr>\n      <th>173</th>\n      <td>10314</td>\n      <td>0.097319</td>\n      <td>0.555236</td>\n      <td>0.347445</td>\n      <td>0.119923</td>\n    </tr>\n    <tr>\n      <th>174</th>\n      <td>10307</td>\n      <td>0.073383</td>\n      <td>0.565547</td>\n      <td>0.361071</td>\n      <td>0.115211</td>\n    </tr>\n    <tr>\n      <th>175</th>\n      <td>10309</td>\n      <td>0.075594</td>\n      <td>0.573091</td>\n      <td>0.351315</td>\n      <td>0.118634</td>\n    </tr>\n    <tr>\n      <th>176</th>\n      <td>10303</td>\n      <td>0.189567</td>\n      <td>0.563822</td>\n      <td>0.246611</td>\n      <td>0.218108</td>\n    </tr>\n  </tbody>\n</table>\n<p>177 rows × 5 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 126
+    }
+   ],
+   "source": [
+    "internet = pandas.read_csv('../datas/2-InternetMerged.csv')\n",
+    "internet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 128
+    }
+   ],
+   "source": [
+    "internet['perc'].min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.342007343"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 129
+    }
+   ],
+   "source": [
+    "internet['perc'].max()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
